Signed-off-by:Enigma <Enigma@Quantum.scenictrek.net>

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -15,7 +15,7 @@
         <a href="<?php echo $this->url(
             array('controller'=>'guestbook'),
             'default',
-            true) ?>">Guestbook</a>
+            true) ?>">Guestbook Test</a>
     </div>
 </div>
  
